--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "deploy": "npm run build && gh-pages -d build"
   },
   "dependencies": {
-    "lucide-svelte": "^0.364.0"
+    "lucide-svelte": "^0.364.0",
+    "marked": "^15.0.12"
   },
   "devDependencies": {
     "@sveltejs/adapter-static": "^3.0.0",
