feat: Enhance project showcase with 3D cards and animations
- Added a new ProjectCard3D component for displaying projects in a 3D card format.
- Implemented ScrollAnimations for smooth entrance effects on page load.
- Introduced ScrollProgress component to visualize scroll progress.
- Created ThreeBackground component for a dynamic 3D background effect.
- Updated projects page to utilize new components and display a list of projects.
- Enhanced styling and animations for a more engaging user experience.

--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "deploy": "npm run build && gh-pages -d build"
   },
   "dependencies": {
+    "gsap": "^3.13.0",
     "lucide-svelte": "^0.364.0",
-    "marked": "^15.0.12"
+    "marked": "^15.0.12",
+    "three": "^0.179.1",
+    "vanilla-tilt": "^1.8.1"
   },
   "devDependencies": {
     "@sveltejs/adapter-static": "^3.0.0",
